minor changes, use add-modules instead of add-module and format fixes